--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -106,14 +106,48 @@
                 android:hint="Option4"
                 android:inputType="textPersonName" />
 
-            <EditText
-                android:id="@+id/correctAnsEditText"
+<!--            <EditText-->
+<!--                android:id="@+id/correctAnsEditText"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="15dp"-->
+<!--                android:ems="10"-->
+<!--                android:hint="Correct Answer"-->
+<!--                android:inputType="numberDecimal" />-->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:ems="10"
-                android:hint="Correct Answer"
-                android:inputType="numberDecimal" />
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#EFEDE9"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/correctOp1"
+                    android:text="Option-1" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/correctOp2"
+                    android:text="Option-2" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/correctOp3"
+                    android:text="Option-3" />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/correctOp4"
+                    android:text="Option-4" />
+
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/submitBtn"
